k8s/test_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
  annotations:
    net.policy.k8s.io/issue: "JIRA-12345"
    net.policy.k8s.io/description: "Restrict access from Backend to DB"
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - {key: name, operator: In, values: [default]}
        - podSelector:
            matchLabels:
              role: backend
      ports:
        - protocol: TCP
          port: 1521
